# auto-assist-lab

./: .env.example  .gitignore  README.md  docker-compose.yml  openapi.json
.run/: processes.json
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: __init__.py  dependencies.py  provider.py
backend/app/models/: __init__.py  enums.py  service_request.py  tenant.py  user.py  workshop.py
backend/app/routers/: __init__.py  admin.py  me.py  operator.py  service_requests.py  tenants.py  workshops.py
backend/app/schemas/: __init__.py  service_request.py  tenant.py  user.py  workshop.py
backend/app/services/: assignment.py  pubsub.py
backend/migrations/: env.py
backend/migrations/versions/: a79f4ae8b243_initial_schema.py  c3f5a8d7e921_add_admin_user_role.py  d4b6e9f3a812_normalize_legacy_user_roles.py  e8a3c6d1f294_add_country_tenancy.py
backend/scripts/: export_openapi.py  seed.py
backend/tests/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_health.py  test_migrations.py  test_models.py  test_seed.py  test_tenancy.py
docs/: AGENTS.md  implementation.md  spec.md
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  firebase.ts  index.css
frontend/src/api/: client.ts  generated.ts  metadata.ts  types.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx  demoAuthAdapter.ts  firebaseAuthAdapter.test.ts  firebaseAuthAdapter.ts  (+3 more)
worker/: pyproject.toml
worker/app/: config.py  main.py
worker/tests/: test_main.py
(+15 files in other folders)
